--- a/webapp/templates/base.html
+++ b/webapp/templates/base.html
@@ -11,11 +11,11 @@
 
 <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
   <div class="container-fluid">
-      <a class="navbar-brand" href="{% url 'home' %}">My market</a>
+      <a class="navbar-brand" href="{% url 'home_oke' %}">My market</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup" style="justify-content: flex-end">
       <div class="navbar-nav">
           {% block navbar %}{% endblock %}
       </div>
