Реализовал создание категории

--- a/webapp/templates/product_view.html
+++ b/webapp/templates/product_view.html
@@ -7,7 +7,7 @@
     <span style="color: white; margin-top: 5px; margin-right: 16px">|</span>
     <a class="navbar-brand" href="">Add Products</a>
     <span style="color: white; margin-top: 5px; margin-right: 16px">|</span>
-    <a class="navbar-brand" href="">Add Category</a>
+    <a class="navbar-brand" href="{% url 'add_category' %}">Add Category</a>
 {% endblock %}
 
 {% block content %}
