--- a/webapp/templates/category_add_view.html
+++ b/webapp/templates/category_add_view.html
@@ -12,7 +12,7 @@
     <h1 style="margin-top: 50px; margin-bottom: 50px">Add Category</h1>
     <form method="post" action="{% url 'add_category' %}">
     {% csrf_token %}
-    <input type="text" name="title" placeholder="Title">
+    <input type="text" name="title" placeholder="Title" required>
     <br>
     <br>
     <textarea name="description" placeholder="Description"></textarea>
