Реализовал частичный шаблон для создания продукта и категории так же добавил поле остатка, создал формы

--- a/webapp/templates/category_add_view.html
+++ b/webapp/templates/category_add_view.html
@@ -5,19 +5,12 @@
 {% block navbar %}
     <a class="navbar-brand" href="{% url 'home' %}">Products</a>
     <span style="color: white; margin-top: 5px; margin-right: 16px">|</span>
-    <a class="navbar-brand" href="">Add Products</a>
+    <a class="navbar-brand" href="{% url 'add_product' %}">Add Products</a>
 {% endblock %}
 
 {% block content_2 %}
     <h1 style="margin-top: 50px; margin-bottom: 50px">Add Category</h1>
     <form method="post" action="{% url 'add_category' %}">
-    {% csrf_token %}
-    <input type="text" name="title" placeholder="Title" required>
-    <br>
-    <br>
-    <textarea name="description" placeholder="Description"></textarea>
-    <br>
-    <br>
-    <button type="submit" class="btn btn-primary">Add Category</button>
-</form>
+        {% include 'partial/product_form.html' with value_submit='Добавить' %}
+    </form>
 {% endblock %}
